Application-1/App-Deployment-V1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstapp-v1-deployment
  namespace: firstapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firstapp-web-v1
  template:
    metadata:
      labels:
        app: firstapp-web-v1
    spec:
      containers:
      - name: firstapp-v1
        image: naveen352/msgapp:1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /livez            #App code must have this path set
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            cpu: "30m"
            memory: "100Mi"
          limits:
            cpu: "60m"
            memory: "200Mi"


---

apiVersion: v1
kind: Service
metadata:
  name: firstapp-v1-service
  namespace: firstapp
spec:
  selector:
    app: firstapp-web-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  #type: ClusterIP     #Only for Fargate type of EKS
  type: NodePort      #For EC2-node type of eks , alb look for node-ip's to target it to.
