Application-1/App-Deployment_vol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstapp-deployment
  namespace: firstapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firstapp-web
  template:
    metadata:
      labels:
        app: firstapp-web
    spec:
      containers:
      - name: firstapp
        image: naveen352/msgapp:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: firstapp-config-vol
          mountPath: /etc/firstapp/config
          readOnly: true
        - name: firstapp-secret-vol
          mountPath: /etc/firstapp/secret
          readOnly: true
      volumes:
      - name: firstapp-config-vol
        configMap:
          name: firstapp-config
      - name: firstapp-secret-vol
        secret:
          secretName: firstapp-secret

---

apiVersion: v1
kind: Service
metadata:
  name: firstapp-service
  namespace: firstapp
spec:
  selector:
    app: firstapp-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  #type: ClusterIP     #Only for Fargate type of EKS
  type: NodePort      #For EC2-node type of eks , alb look for node-ip's to target it to.
