Application-1/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firstapp-alb
  namespace: firstapp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance   # or "instance" if you use NodePort Services
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      #Order /me before / to keep matching unambiguous.
#      - path: /me      # make sure your application serves at /me instead of /
#        pathType: Prefix
#        backend:
#          service:
#            name: secondapp-service
#            port:
#              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firstapp-service
            port:
              number: 80
